--- a/Blind-LowVision App 1/Resources/layout/layoutCarousel.xml
+++ b/Blind-LowVision App 1/Resources/layout/layoutCarousel.xml
@@ -6,16 +6,19 @@
     android:layout_height="match_parent"
     android:background="#F36E36">
 
-    <com.gigamole.infinitecycleviewpager.HorizontalInfiniteCycleViewPager
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/horizontal_viewpager"
-        app:icvp_interpolator="@android:anim/accelerate_decelerate_interpolator"
-        app:icvp_center_page_scale_offset="30dp"
-        app:icvp_min_page_scale_offset="5dp"
-        app:icvp_scroll_duration="250"
-        app:icvp_max_page_scale="0.8"
-        app:icvp_min_page_scale="0.55"
-        app:icvp_medium_scaled="false" />
+            
+        
+        <com.gigamole.infinitecycleviewpager.HorizontalInfiniteCycleViewPager
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/horizontal_viewpager"
+            app:icvp_interpolator="@android:anim/accelerate_decelerate_interpolator"
+            app:icvp_center_page_scale_offset="30dp"
+            app:icvp_min_page_scale_offset="5dp"
+            app:icvp_scroll_duration="250"
+            app:icvp_max_page_scale="0.8"
+            app:icvp_min_page_scale="0.55"
+            app:icvp_medium_scaled="false" 
+        />
 
 </LinearLayout>
