--- a/Blind-LowVision App 1/Resources/layout/loginForm.xml
+++ b/Blind-LowVision App 1/Resources/layout/loginForm.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="15dp">
 
         <TextView
-            android:text="Email/Username"
+            android:text="Username"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
